--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -444,7 +444,7 @@ $anim-speed: 1s;
                         flex-direction: row-reverse;
 
                         & > div {
-                            margin-right: 32px;
+                            margin-left: 32px;
                         }
 
                     }
