first commit on new branch

--- a/src/components/header-component/header.scss
+++ b/src/components/header-component/header.scss
@@ -295,23 +295,35 @@ header {
       .desktopNav {
         display: flex;
         align-self: center;
+        align-items: center;
+        justify-content: center;
+        border-radius: 32px;
+        background: #E8FF57;
+        padding: 12px 16px;
 
         a {
           border: none;
           display: flex;
-          margin-bottom: 8px;
+          // margin-bottom: 8px;
           margin-right: 16px;
           font-size: 16px;
           color: var(--textTitle);
           text-decoration: none;
           cursor: pointer;
-          padding: 8px;
+          // padding: 8px;
           transition: transform 0.1s ease-out;
 
-          &:hover {
+          &:last-child {
             // transform: translateY(-4px);
             // color: var(--headingAccent);
-            font-weight: 900;
+            margin-right: 0;
+          }
+
+          &.active {
+            color: white;
+            padding: 4px 8px;
+            border-radius: 32px;
+            background: #000;
           }
 
         }
