aella portfolio update

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -18,6 +18,13 @@ h1,h2,h3,h4,h5,h6 {
   color: var(--textTitle);
 }
 
+.emphasis {
+  color: var(--textTitle);
+  background: var(--headingAccent);
+  font-weight: bolder;
+  font-size: 20px;
+}
+
 * {
   margin: 0;
   padding: 0;
