--- a/src/pages/projects/projectListing.scss
+++ b/src/pages/projects/projectListing.scss
@@ -2,77 +2,69 @@
 
 .projectListingWapper {
     margin: 40px auto;
+    background: var(--projectFolder);
+    display: block;
 
-    .projects {
+    & > div {
+        margin-top: 40px;
 
-        .projectListComponent {
-            margin: 40px 0 80px;
-            
-    
-            .projectListContentArea {
-                width: 100%;
-                h1 {
-                    margin: 24px 0;
-                }
-            }
-    
-            .imageHolder {
-                display: inline-flex;
-                background-color: rgb(240, 240, 240);
-                width: 100%;
-                overflow: hidden;
-                height: 30vh;
-    
-                // if it's not of compartible mediatype video or image is displayed none
-                // img.video, video.image {
-                //     display: none;
-                // }
-    
-                img, video {
-                    margin: auto;
-                    width: 75%;
-                    transform: scale(1.15);
-                    height: auto;
-                }
-    
-                video {
-                    width: 55%; 
-                }
-            }
+        h1 {
+            text-align: center;
+            font-size: 28px;
         }
     }
+    
+    .thumbnailWrapper {
+        display: block;
+        width: 100%;
+        padding: 0;
+        border-radius: 24px;
+        margin-top: 16px;
+        position: relative;
 
+        .docThumbnailGroup {
+            margin-bottom: 24px;
+        }
+    }
 }
 
 @include for-tablet-only() {
-    
-    .projectListingWapper {
-        margin-top: 104px;
-        
-        .projects {
-            display: flex;
-            width: 100%;
 
-            .projectListComponent {
-                width: 70%;
-                
-                .imageHolder { 
-                    width: 70%; 
-                    padding: 40px;
-                    display: grid;
-                    height: 30vh;
-    
-                    img {
-                        align-self: center;
-                    }
-                }
+    .projectListingWapper {
+        background: var(--projectFolder);
+        margin-top: 104px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        // padding-top: 8%;
+
+        & > div {
+            margin-top: 52px;
+        }
         
-                .projectListContentArea {
-                    width: 70%;
+        .thumbnailWrapper {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            width: 100%;
+            gap: 32px;
+            // padding: 24px;
+            border-radius: 24px;
+            margin-top: 48px;
+            position: relative;
+
+            & > :last-child:nth-child(odd) {
+                grid-column: 1 / 3;
+
+                & > div {
+                    display: flex;
+                    flex-direction: row-reverse;
+
+                    & > :last-child {
+                        padding-right: 16px;
+                    }
                 }
             }
         }
-    
     }
 }
 
